...
            "value": "Quick Lookup"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "速查"
          }
        }
      }
    },
    "R20": {
      "localizations": {
...
            "state": "translated",
            "value": "App 版本"
          }
        }
      }
    },
    "settings.clearHistory": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Clear Recent History"
          }
...
            "state": "translated",
            "value": "默认起始页"
          }
        }
      }
    },
    "settings.deleteAll": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete All Local Data"
          }
...
            "state": "translated",
            "value": "删除全部本地数据"
          }
        }
      }
    },
    "settings.export": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Export Local Data"
          }
...
            "state": "translated",
            "value": "触觉反馈"
          }
        }
      }
    },
    "settings.import": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Import Local Data"
          }
...
            "state": "translated",
            "value": "快捷键平台"
          }
        }
      }
    },
    "settings.resetProgress": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Reset Project Progress"
          }
...
            "value": "Library"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "资料库"
          }
        }
      }
    },
    "tab.lookup": {
      "localizations": {
...
            "value": "Workbench"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "工作台"
          }
        }
      }
    },
    "tab.workflows": {
      "localizations": {
...
            "value": "Workflows"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "工作流"
          }
        }
      }
    },
    "Windows": {
      "localizations": {
...
